2008-10-20  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/wireless-security.c
	  src/wireless-security/wireless-security.h
		- (ws_wpa_fill_default_ciphers): remove; the supplicant is smart enough
			to figure out the intersection of the card's capabilities and the
			AP's capabilities
		- (wireless_security_clear_ciphers): new function

	* src/wireless-security/ws-wpa-psk.c
		- (fill_connection): unbreak WPA adhoc connections by actually writing
			a valid config (rh #461197)

	* src/wireless-security/ws-wpa-eap.c
		- (fill_connection): don't call ws_wpa_fill_default_ciphers(), un-needed

2008-10-20  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method-tls.c
	  src/wireless-security/eap-method-ttls.c
	  src/wireless-security/eap-method-peap.c
	  src/wireless-security/eap-method-leap.c
		- (fill_connection): don't fill default ciphers here, they will get
			filled in the WirelessSecurity subclasses when appropriate

2008-10-20  Dan Williams  <dcbw@redhat.com>

	* gconf-helpers/nma-gconf-connection.c
		- (service_get_secrets): fix for exported connection class clarifications

2008-10-18  Kjartan Maraas  <kmaraas@gnome.org>

	* src/connection-editor/ce-page-ip4.glade: Don't translate
	widget labels.

2008-10-17  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method.c
		- (default_filter, eap_method_default_file_chooser_filter_new): accept
			.cer and .crt file extensions too

2008-10-15  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wifi.c
		- (get_security_for_ap): fix the following case for cards that can't
			do WPA or RSN but can pass through the information elements, and
			where the AP has privacy turned on in the beacon

2008-10-10  Tambet Ingo  <tambet@gmail.com>

	* nm-connection-editor.desktop: Add.

2008-10-09  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
		- (nm_gconf_set_stringhash_helper): ensure that stale info isn't left